--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/icons/AGiXT_blackbg.png
+    - assets/privacy_policy.md
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
