--- a/android/wear/src/main/AndroidManifest.xml
+++ b/android/wear/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         
+        <!-- Standalone Wear OS app metadata - required for app to show in launcher -->
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
+        
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
